--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -458,9 +458,6 @@ header.light .header__logo img[data-background=transparent]{
 header.light .fa-chevron-down{
     color: var(--accent-color);
 }
-.header__head{
-    
-}
 
 .header__logo_search_field{
     width: 100%;
@@ -470,14 +467,16 @@ header.light .fa-chevron-down{
 }
 .header__logo{
     width: 180px;
-    aspect-ratio: 3.3;
+    aspect-ratio: 3.28;
 }
 .header__search_option{
-    position: relative;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     cursor: pointer;
 }
-.header__search_option::after{
+.header__search_option span{
+    position: relative;
+}
+.header__search_option span::after{
     content: "";
     position: absolute;
     left: 0;
@@ -485,6 +484,9 @@ header.light .fa-chevron-down{
     height: 2.25px;
     width: 100%;
     background-color: var(--accent-color);
+}
+.header__search_option .fa-search{
+    display: none;
 }
 nav .header__main-menu{
     display: flex;
@@ -494,10 +496,22 @@ nav .header__main-menu{
 .header__nav_option{
     display: flex;
     align-items: center;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     gap: .7rem;
     cursor: pointer;
 }
+.header__right-group{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.header__hamburger-menu{
+    display: none;
+    font-size: inherit;
+}
+.header__hamburger-menu .fa-xmark{
+    display: none;
+} 
 .header__nav_option .fa-chevron-down{
     font-size: 1.1rem;
 }
@@ -513,18 +527,30 @@ nav .header__main-menu{
     transition: .3s;
     color: var(--type-color);
 }
-.header__submenu__placeholder{
+.header__placeholders-wrapper{
+    display: flex;
+    gap: 4rem;
+}
+.header__submenu__placeholder,
+.header__subsubmenu__placeholder{
     transition: .3s;
     padding-block: calc(var(--margin-block) * 1);
 }
 .header__submenu__content h3{
-     margin-bottom: 2.7rem;
+    margin-bottom: 2.7rem;
 }
-.header__submenu__content .submenu-list{
-     display: flex;
-     flex-direction: column;
-     gap: 1.5rem;
-     list-style: none;
+.header__submenu__content .submenu-list,
+.header__subsubmenu__content .submenu-list{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    list-style: none;
+    max-width: 65ch;
+}
+.header__subsubmenu__placeholder{
+    margin-top: 4.3rem;
+    border-left: 1px solid var(--soft-gray);
+    padding-left: 3rem;
 }
 
 
