--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -282,8 +282,13 @@ carousel swiper
     display: flex;
     /* justify-content: stretch; */
 }
-.swiper-slide {
+/* .swiper-slide {
     padding-right: var(--carousel-items-spacing);
+} */
+.card-trio{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
 }
 .carousel-prev-btn,
 .carousel-next-btn {
