--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -23,6 +23,10 @@
     --accent-gradient: linear-gradient(135deg, #8c1311, #e4322f);
 
     --container-width: calc(100vw - calc(2 * var(--inline-padding)));
+
+
+    /* bootstrap customizations */
+    --bs-body-bg: #ecedf2;
 }
 
 body {
@@ -44,10 +48,10 @@ utility
 *
 *
 */
-.container {
+/* .container {
     margin-inline: auto;
     max-width: var(--container-width);
-}
+} */
 
 .img {
     position: relative;
@@ -102,7 +106,7 @@ p {
 }
 
 a {
-    text-decoration: none;
+    text-decoration: none !important;
     color: unset;
 }
 button {
@@ -186,11 +190,6 @@ hero
 }
 
 .hero__section .hero__content {
-    z-index: 2;
-    position: absolute;
-    bottom: 4rem;
-    left: var(--inline-padding);
-    max-width: 50%;
     color: var(--off-white-color);
     display: flex;
     flex-direction: column;
@@ -234,6 +233,7 @@ sections
 }
 .section-title {
     margin-bottom: 2rem;
+    font-weight: 600;
 }
 .titled-section .section-title {
     display: flex;
@@ -257,6 +257,7 @@ cards
     flex-direction: column;
     position: relative;
     transition: 0.3s ease;
+    border: none !important;
 }
 
 .card__media {
@@ -295,7 +296,7 @@ cards
     display: flex;
     width: fit-content;
     align-items: center;
-    padding: 6px 20px;
+    padding: 3px 20px;
     flex-direction: column;
     color: var(--off-white-color);
 }
@@ -312,13 +313,14 @@ cards
 
 .event-metadata__location {
     text-transform: uppercase;
+    letter-spacing: 3px;
     position: absolute;
     bottom: 100%;
     left: 50%;
     transform: translate(-50%, 0);
     background-color: var(--off-white-color);
     color: var(--accent-color);
-    padding: 4px 10px;
+    padding: 3px 15px 0px 15px;
     border-radius: 5px 5px 0 0;
     font-weight: 600;
     font-size: 1rem;
@@ -348,8 +350,6 @@ cards
 /* support-us-banner */
 
 .support-us-banner{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     border-radius: var(--card-border-radius);
     background-color: white;
     overflow: hidden;
@@ -402,7 +402,6 @@ carousel swiper
 }
 .swiper {
     position: relative;
-    width: var(--container-width);
 }
 .swiper .swiper-wrapper {
     position: relative;
@@ -411,11 +410,6 @@ carousel swiper
 }
 .swiper-pagination {
     /* bottom: -22px !important; */
-}
-.card-trio {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
 }
 .carousel-prev-btn,
 .carousel-next-btn {
@@ -445,11 +439,11 @@ carousel swiper
     stroke: var(--accent-color);
 }
 .carousel-next-btn {
-    right: -7rem;
+    right: -5rem;
     padding-left: 0.3rem;
 }
 .carousel-prev-btn {
-    left: -7rem;
+    left: -5rem;
     padding-right: 0.3rem;
 }
 /*
@@ -479,7 +473,6 @@ stats section
     gap: 30px;
 }
 .stats-card {
-    width: clamp(40rem, 50vw, 65rem);
     background-color: #0001;
     border: 1px solid #0003;
     border-radius: var(--card-border-radius);
@@ -548,54 +541,40 @@ footer section {
     border-bottom: 1px solid var(--off-white-color);
 }
 
-footer .social-reach {
-    display: flex;
-    justify-content: space-between;
-}
-footer .social-reach .email-collector {
-    max-width: 40%;
-}
-footer .social-reach .email-collector h3 {
-    margin-bottom: 1rem;
-}
-footer .social-reach .email-collector p {
-    margin-bottom: 2rem;
-}
-footer .social-reach .email-collector .email-input {
+footer  .email-collector .email-input {
     display: flex;
     border-radius: var(--card-border-radius);
     overflow: hidden;
 }
-footer .social-reach .email-collector .email-input input[type="email"] {
+footer  .email-collector .email-input input[type="email"] {
     background-color: var(--off-white-color);
     padding: 1rem 1.5rem;
     font-size: 1.6rem;
     flex-grow: 1;
 }
 footer
-    .social-reach
     .email-collector
     .email-input
     input[type="email"]::placeholder {
     opacity: 0.8;
 }
-footer .social-reach .email-collector .email-input button {
+footer  .email-collector .email-input button {
     padding: 1rem 1.5rem;
     background-color: var(--accent-color);
     color: white;
 }
-footer .social-reach .social-follow {
+footer  .social-follow {
     max-width: 40%;
 }
-footer .social-reach .social-follow h3 {
+footer  .social-follow h3 {
     margin-bottom: 2rem;
 }
-footer .social-reach .social-follow .social-list {
+footer  .social-follow .social-list {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
 }
-footer .social-reach .social-follow .social-list .social-icon {
+footer  .social-follow .social-list .social-icon {
     display: grid;
     place-items: center;
     width: 4rem;
@@ -607,14 +586,11 @@ footer .social-reach .social-follow .social-list .social-icon {
     font-size: 1.8rem;
     color: var(--accent-color);
 }
-footer .social-reach .social-follow .social-list .social-icon:hover {
+footer  .social-follow .social-list .social-icon:hover {
     color: white;
     background-color: var(--accent-color);
 }
 
-footer .popular-links h3 {
-    margin-bottom: 2.5rem;
-}
 footer .popular-links ul {
     display: flex;
     flex-direction: column;
@@ -624,13 +600,7 @@ footer .popular-links ul {
     max-width: 60%;
 }
 
-footer .popular-links ul li {
-    margin-bottom: 1.6rem;
-    line-height: 1.3;
-}
-footer .popular-links ul li a {
-    padding-bottom: 0.3rem;
-}
+
 footer .copyright {
     padding-block: 1.5rem;
 }
@@ -759,20 +729,4 @@ nav .header__main-menu {
     padding-left: 3rem;
 }
 
-/* articles gallery section */
-.main-gallery {
-    display: flex;
-    gap: 20px;
-    flex-direction: column;
-}
-.main-gallery__top,
-.main-gallery__bottom {
-    display: grid;
-    gap: 20px;
-}
-.main-gallery__top {
-    grid-template-columns: 1fr 1fr;
-}
-.main-gallery__bottom {
-    grid-template-columns: 1fr 1fr 1fr;
-}
+
