--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -142,7 +142,7 @@ input {
 .card-title {
     font-size: 1.9rem;
     font-weight: 700;
-    line-height: 90%;
+    line-height: 98%;
 }
 .card-subtitle {
     font-size: 1.3rem;
@@ -186,7 +186,9 @@ hero
         #1e1e1e 100%
     );
 }
-
+.scroll-down-indicator {
+    width: 3.5rem;
+}
 .hero__section .hero__content {
     color: var(--off-white-color);
     display: flex;
@@ -265,7 +267,7 @@ cards
 .card__header {
     margin-bottom: 1rem;
 }
-.card__content{
+.card__content {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -275,10 +277,21 @@ cards
     display: flex;
     flex-direction: column;
     padding: 1.65rem;
+    position: relative;
 }
 
 .card__tag {
     margin-bottom: 0.6rem;
+}
+.card__tag-floating{
+    position: absolute;
+    top: 0;
+    transform: translateY(-50%);
+    padding: 4px 12px;
+    background-color: var(--accent-color);
+    color: var(--off-white-color);
+    border-radius: var(--card-border-radius);
+    margin-bottom: 0;
 }
 .card__footer {
     margin-top: auto;
@@ -286,33 +299,57 @@ cards
 }
 
 /* horizontal card */
-.card.horizontal-card{
+.card.horizontal-card {
     flex-direction: row;
     height: 100%;
 }
-.card.horizontal-card .img-6_9{
+.card.horizontal-card .img-6_9 {
     padding-top: 0px;
     height: 100%;
 }
-.card.horizontal-card .card__media{
+.card.horizontal-card .card__media {
     min-width: 40%;
     border-radius: var(--card-border-radius) 0 0 var(--card-border-radius);
 }
-.card.horizontal-card .card__summary{
+.card.horizontal-card .card__summary {
     display: none;
 }
 
-.row .card{
+.row .card {
     height: 100%;
 }
+/* stikcy card */
+.row .sticky-card {
+    height: fit-content;
+}
+.sticky-card{
+    position: sticky;
+    top: 20rem;
+}
 
-.event-metadata {
-    background-color: var(--accent-color);
-    border-radius: var(--card-border-radius);
+.event-metadata-wrapper{
     position: absolute;
     left: 50%;
     bottom: 0;
     transform: translate(-50%, 60%);
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: .2rem;
+
+}
+.event-metadata {
+    position: relative;   
+    background-color: var(--accent-color);
+    border-radius: var(--card-border-radius);
+}
+.event-metadata__play-icon{
+    display: grid;
+    place-items: center;
+    height: 100%;
+    width: 5rem;
+    border-radius: var(--card-border-radius);
+    background-color: var(--accent-color);
+    color: var(--off-white-color);
 }
 .event-metadata__datetime {
     display: flex;
@@ -344,7 +381,7 @@ cards
     color: var(--accent-color);
     padding: 3px 15px 0px 15px;
     border-radius: 5px 5px 0 0;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 1rem;
 }
 
@@ -366,8 +403,6 @@ cards
     font-weight: 600;
     font-size: 1.3rem;
 }
-
-
 
 /* support-us-banner */
 .support-us-banner {
@@ -414,11 +449,11 @@ carousel swiper
     display: flex;
     padding-bottom: 40px;
 }
-.swiper-wrapper .swiper-slide{
+.swiper-wrapper .swiper-slide {
     height: 100%;
 }
 .swiper-pagination {
-    /* bottom: -22px !important; */
+    bottom: -22px !important;
 }
 .carousel-prev-btn,
 .carousel-next-btn {
@@ -711,26 +746,86 @@ nav .header__main-menu {
 }
 .header__placeholders-wrapper {
     display: flex;
-    gap: 4rem;
+    gap: 6rem;
 }
 .header__submenu__placeholder,
 .header__subsubmenu__placeholder {
     transition: 0.3s;
     padding-block: calc(var(--margin-block) * 0.6);
 }
-.header__submenu__content h3 {
+.header__submenu__content h3,
+.header__subsubmenu__content h3 {
     margin-bottom: 2.7rem;
 }
 .header__submenu__content .submenu-list,
 .header__subsubmenu__content .submenu-list {
+    padding-left: 0;
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
     list-style: none;
     max-width: 65ch;
 }
-.header__subsubmenu__placeholder {
-    margin-top: 4.3rem;
-    border-left: 1px solid var(--soft-gray);
-    padding-left: 3rem;
+
+.header__submenu__separator{
+    width: 1px;
+    background-color: var(--soft-gray);
+    padding-block: var(--margin-block);
+    align-self: center;
+    opacity: 0;
 }
+#subsubmenu-title{
+    opacity: 0.6;
+}
+
+
+
+
+
+/* bread crumbs */
+.bread-crumbs-container {
+    padding-top: 5rem;
+}
+.bread-crumb, .bread-crumbs{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+
+.bread-crumb .chip{
+    padding: .5rem 1.5rem;
+    border-radius: var(--card-border-radius);
+    background-color: #734E4F44;
+    color: #675B5Bcc;
+    font-weight: 800;
+}
+
+.bread-crumb:last-of-type img{
+    display: none;
+}
+
+/* under hero: hero summary */
+.hero-summary{
+    padding-block: calc(var(--margin-block) * 0.4);
+}
+.hero-summary__content{
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.hero-summary__content .read-more{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.hero-summary__content .read-more i{
+    color: var(--accent-color);
+}
+.hero-summary__image-credit{
+    font-size: 1.1rem;
+}
+
+
