--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -51,6 +51,9 @@ utility
 .pad-header-height{
     padding-top: var(--header-height);
 }
+.pad-header-height.block-section{
+    margin-top: calc(var(--margin-block) * 0.5);
+}
 
 .img {
     position: relative;
@@ -64,12 +67,18 @@ utility
 }
 
 .img img,
-.img-6_9 img {
+.img-6_9 img{
     width: 100%;
     height: 100%;
     inset: 0;
     position: absolute;
     object-fit: cover;
+}
+.img-contain img{
+    object-fit: contain;
+}
+.img-contain img{
+    object-fit: contain;
 }
 
 .meta {
@@ -663,6 +672,7 @@ header {
     position: fixed;
     left: 0;
     right: 0;
+    top: 0;
     color: var(--off-white-color);
     width: 100%;
     padding-block: 20px;
@@ -876,6 +886,34 @@ nav .header__main-menu {
 .hero__secondary__content .hero__secondary__content__page-description{
  max-width: 50%;
 }
+
+
+
+/* person card */
+.person-card{
+    padding: 1rem 1.8rem;
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+    align-items: center;
+    gap: 2rem;
+    background-color: white;
+    border-radius: var(--card-border-radius);
+}
+.person-card__img {
+    width: 100%;
+    aspect-ratio: 1;
+}
+.person-card__info{
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.person-card__name{
+    font-size: 1.9rem;
+    font-weight: bold;
+}
+
 
 
 
